admission/validatingAdmissionPolicies/policies/selinux-role/initcontainers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-initcontainers-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4c783e13-6559-579d-84d4-8256f789369e
  labels:
    pss.security.kolteq.com/warn: 'baseline - restricted'
    selinux-role-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role-initcontainers.security.kolteq.com/audit: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/enforce: 'false - true'
spec:
  policyName: selinux-role-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-role-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-initcontainers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4c783e13-6559-579d-84d4-8256f789369e
  labels:
    security.kolteq.com/warn: enabled
    selinux-role-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    selinux-role-initcontainers.security.kolteq.com/audit: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/enforce: 'false - true'
spec:
  policyName: selinux-role-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: selinux-role-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-initcontainers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4c783e13-6559-579d-84d4-8256f789369e
  labels:
    selinux-role-initcontainers.security.kolteq.com/warn: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role-initcontainers.security.kolteq.com/audit: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/enforce: 'false - true'
spec:
  policyName: selinux-role-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-role-initcontainers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-initcontainers-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4c783e13-6559-579d-84d4-8256f789369e
  labels:
    pss.security.kolteq.com/audit: 'baseline - restricted'
    selinux-role-initcontainers.security.kolteq.com/audit: 'false - true'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role-initcontainers.security.kolteq.com/enforce: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/warn: 'false - true'
spec:
  policyName: selinux-role-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-role-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-initcontainers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4c783e13-6559-579d-84d4-8256f789369e
  labels:
    security.kolteq.com/audit: enabled
    selinux-role-initcontainers.security.kolteq.com/audit: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role-initcontainers.security.kolteq.com/enforce: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/warn: 'false - true'
spec:
  policyName: selinux-role-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: selinux-role-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-initcontainers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4c783e13-6559-579d-84d4-8256f789369e
  labels:
    selinux-role-initcontainers.security.kolteq.com/audit: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role-initcontainers.security.kolteq.com/enforce: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/warn: 'false - true'
spec:
  policyName: selinux-role-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-role-initcontainers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-initcontainers-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4c783e13-6559-579d-84d4-8256f789369e
  labels:
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    selinux-role-initcontainers.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role-initcontainers.security.kolteq.com/audit: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/warn: 'false - true'
spec:
  policyName: selinux-role-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-role-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-initcontainers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4c783e13-6559-579d-84d4-8256f789369e
  labels:
    security.kolteq.com/enforce: enabled
    selinux-role-initcontainers.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
    selinux-role-initcontainers.security.kolteq.com/audit: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/warn: 'false - true'
spec:
  policyName: selinux-role-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: selinux-role-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-initcontainers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 4c783e13-6559-579d-84d4-8256f789369e
  labels:
    selinux-role-initcontainers.security.kolteq.com/enforce: 'false - true'
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role-initcontainers.security.kolteq.com/audit: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/warn: 'false - true'
spec:
  policyName: selinux-role-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-role-initcontainers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
