admission/validatingAdmissionPolicies/policies/selinux-role/initcontainers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: selinux-role-initcontainers
  annotations:
    security.kubeapt.io/displayName: 'Selinux Role'
    security.kubeapt.io/description: ValidatingAdmissionPolicy for selinux-role/initcontainers.
    security.kubeapt.io/resource: Initcontainers
    security.kubeapt.io/severity: medium
    security.kubeapt.io/remediation: Adjust workloads to satisfy the selinux-role/initcontainers policy.
    policies.kolteq.com/validatingAdmissionPolicy: 4c783e13-6559-579d-84d4-8256f789369e
  labels:
    pss.security.kolteq.com/audit: 'baseline - restricted'
    pss.security.kolteq.com/enforce: 'baseline - restricted'
    pss.security.kolteq.com/warn: 'baseline - restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role-initcontainers.security.kolteq.com/audit: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/enforce: 'false - true'
    selinux-role-initcontainers.security.kolteq.com/warn: 'false - true'
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
  validations:
    - expression: >
        !has(object.spec.initContainers) ||
        object.spec.initContainers.all(ic,
          !has(ic.securityContext) ||
          !has(ic.securityContext.seLinuxOptions) ||
          !has(ic.securityContext.seLinuxOptions.role) ||
          ic.securityContext.seLinuxOptions.role == ""
        )
      message: >
        spec.initContainers[*].securityContext.seLinuxOptions.role must be undefined or an empty string ("").
